no content message, spacing issues

--- a/src/features/feed/AddItem.module.scss
+++ b/src/features/feed/AddItem.module.scss
@@ -1,7 +1,4 @@
 .addItem {
-  margin-top: 0.8rem;
-  margin-left: 0.8rem;
-
   button {
     background-color: var(--highlight-blue);
     border: none;
