--- a/src/features/feed/FilterSelect.module.scss
+++ b/src/features/feed/FilterSelect.module.scss
@@ -1,6 +1,4 @@
 .filter {
-  margin: 0.8rem;
-
   p {
     display: inline;
     padding: 0;
