--- a/src/features/feed/Home.module.scss
+++ b/src/features/feed/Home.module.scss
@@ -6,3 +6,10 @@
   border: 1px solid black;
   background-color:  var(--background)
 }
+
+.content {
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
