--- a/src/features/feed/ItemList.module.scss
+++ b/src/features/feed/ItemList.module.scss
@@ -2,7 +2,6 @@
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 2rem;
 }
 
 h2 {
